Fix the fucking header item alignments. Consider replacing inuit.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3805,19 +3805,21 @@ body {
 
 /* line 8, ../scss/ui/_icons.scss */
 .ic__graphic {
+  display: block;
   height: 32px;
-  left: 4.5px;
+  left: 50%;
+  margin-left: -16px;
   position: absolute;
   top: 7px;
   width: 32px;
 }
 
-/* line 16, ../scss/ui/_icons.scss */
+/* line 18, ../scss/ui/_icons.scss */
 .ic__graphic--plus {
   border: 4px solid #fdfdfd;
   border-radius: 50%;
 }
-/* line 20, ../scss/ui/_icons.scss */
+/* line 22, ../scss/ui/_icons.scss */
 .ic__graphic--plus:before, .ic__graphic--plus:after {
   background-color: #fdfdfd;
   content: '';
@@ -3828,7 +3830,7 @@ body {
   top: 10px;
   width: 12px;
 }
-/* line 31, ../scss/ui/_icons.scss */
+/* line 33, ../scss/ui/_icons.scss */
 .ic__graphic--plus:after {
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
@@ -3837,17 +3839,18 @@ body {
   transform: rotate(90deg);
 }
 
-/* line 36, ../scss/ui/_icons.scss */
+/* line 38, ../scss/ui/_icons.scss */
 .ic__graphic--menu {
   border: 4px solid #fdfdfd;
   border-left-width: 0;
   border-right-width: 0;
   height: 20px;
-  left: 11.5px;
+  left: 50%;
+  margin-left: -10px;
   top: 14px;
   width: 20px;
 }
-/* line 45, ../scss/ui/_icons.scss */
+/* line 48, ../scss/ui/_icons.scss */
 .ic__graphic--menu:after {
   background-color: #fdfdfd;
   content: '';
@@ -4071,36 +4074,37 @@ body {
 /* line 15, ../scss/ui/_header.scss */
 .header__title {
   color: #fdfdfd;
+  font-size: 1.5rem;
   font-weight: 100;
+  line-height: 2;
   margin-bottom: 0;
-  padding-left: 0.2em;
+  text-align: center;
 }
 
-/* line 22, ../scss/ui/_header.scss */
+/* line 24, ../scss/ui/_header.scss */
 .view-filter {
   height: 100%;
-  padding: 0 12px;
   position: relative;
 }
 
-/* line 28, ../scss/ui/_header.scss */
+/* line 29, ../scss/ui/_header.scss */
 .menu {
   height: 100%;
   position: relative;
 }
-/* line 32, ../scss/ui/_header.scss */
+/* line 33, ../scss/ui/_header.scss */
 .menu .selector {
   padding: 0;
 }
 
-/* line 37, ../scss/ui/_header.scss */
+/* line 38, ../scss/ui/_header.scss */
 .menu--selector__options {
   min-width: 25%;
   position: absolute;
   right: 0;
   width: auto;
 }
-/* line 43, ../scss/ui/_header.scss */
+/* line 44, ../scss/ui/_header.scss */
 .menu--selector__options a {
   color: #41987b;
   display: block;
@@ -4108,53 +4112,52 @@ body {
   text-decoration: none;
   width: 100%;
 }
-/* line 50, ../scss/ui/_header.scss */
+/* line 51, ../scss/ui/_header.scss */
 .menu--selector__options a:hover {
   color: #fdfdfd;
 }
 
-/* line 56, ../scss/ui/_header.scss */
+/* line 57, ../scss/ui/_header.scss */
 .grid__item:first-child .btn--header {
-  margin-left: 0.5em;
+  margin-left: 0.75em;
 }
 
-/* line 60, ../scss/ui/_header.scss */
-.grid__item:last-child .btn--header {
-  margin-right: 0.5em;
+/* line 61, ../scss/ui/_header.scss */
+.header--friends .view-filter .selector {
+  padding-left: 24px;
+  padding-right: 0;
 }
 
-/* line 65, ../scss/ui/_header.scss */
+/* line 67, ../scss/ui/_header.scss */
 .header--friends .grid__item,
 .header--meet-maker .grid__item {
   padding-bottom: 0.5em;
   padding-top: 0.5em;
 }
-/* line 69, ../scss/ui/_header.scss */
+/* line 71, ../scss/ui/_header.scss */
 .header--friends .grid__item .btn,
 .header--meet-maker .grid__item .btn {
   height: 100%;
   max-width: 100%;
-}
-
-/* line 76, ../scss/ui/_header.scss */
-.header--meet-maker .grid__item:nth-child(2) {
-  padding-left: 0.75em;
-  padding-right: 0.75em;
-}
-/* line 81, ../scss/ui/_header.scss */
-.header--meet-maker .grid__item:nth-child(3) {
-  padding-left: 0.75em;
-  padding-right: 0.75em;
-}
-/* line 85, ../scss/ui/_header.scss */
-.header--meet-maker .grid__item:nth-child(3) .btn--header {
   padding-left: 0.8em;
   padding-right: 0.8em;
 }
+
+/* line 80, ../scss/ui/_header.scss */
+.header--meet-maker .grid__item:nth-child(2) {
+  padding-bottom: 0;
+  padding-top: 0;
+}
+/* line 85, ../scss/ui/_header.scss */
+.header--meet-maker .grid__item:nth-child(3) {
+  padding-left: 0.75em;
+  padding-right: 0.75em;
+  text-align: right;
+}
 /* line 91, ../scss/ui/_header.scss */
 .header--meet-maker .header__title {
-  font-size: 1.2em;
-  line-height: 32px;
+  padding-bottom: 0;
+  padding-top: 0;
 }
 
 /* line 1, ../scss/ui/_tabSwitcher.scss */
