--- a/public/scss/ui/_icons.scss
+++ b/public/scss/ui/_icons.scss
@@ -6,8 +6,10 @@
 }
 
     .ic__graphic {
+        display: block;
         height: 32px;
-        left: 4.5px;
+        left: 50%;
+        margin-left: -16px;
         position: absolute;
         top: 7px;
         width: 32px;
@@ -38,7 +40,8 @@
         border-left-width: 0;
         border-right-width: 0;
         height: 20px;
-        left: 11.5px;
+        left: 50%;
+        margin-left: -10px;
         top: 14px;
         width: 20px;
 
